src/grammar/ink/grammar.js
const F = field, O = optional, R = repeat, R1 = repeat1, S = seq, P = prec, T = token, D = prec.dynamic,
      C = choice, A = alias, OF = (a, b) => O(F(a, b)), PR = prec.right, I = T.immediate
const decimal = /-?(?:\d+\.\d*|\.\d+|\d+)(?:e[+-]?\d+)?/, iden = /[a-zA-Z][a-zA-Z\d]*/
module.exports = grammar({
  name: 'terse',
  word: $ => $.var,
  extras: $ => [/[ \t]+/],
  externals: $ => [$._MINUS, $._BOOL, $._BOOLS, $._INTS, $._FLOATS, $._DATES, $._TIMES, $._SYMBOLS, $._STRING],
  inline: $ => [$.phrase, $.items],
  supertypes: $ => [$.clause, $.phrase, $.noun, $.verb],
  conflicts: $ => [
    [$.group, $.seq],
    [$.clause, $.compose],
    [$.apposit, $.transit],
    [$.literal, $.name],
    [$.args, $.dict],
    [$.apply, $.dict],
    [$.right, $.bind],
    [$.right, $.defer, $.monad, $.op],
    [$.right, $.monad, $.op],
    [$.bind, $.pending, $.verb],
    [$.defer, $.pending],
  ],

  rules: {
    terse: $ => S(O($._line), R(S($.sep, O($._line)))),
    _line: $ => C(S($._stmt, O($._inline_comment)), $._line_comment, $.command),
    command: _ => T(P(10, S('\\', /[a-zA-Z][^\n]*/))),
    _stmt: $ => P(1, C(D(2, $.verb), $.noun, D(-1, $.clause), D(-1, $.adjunct))),
    clause: $ => D(-1, C($.right, $.bind, $.transit, $.apposit, $.phrase, $.cond)),
    adjunct: $ => D(-1, C($.defer, $.pending, $.intrans, $.prefix, $.compose)),
    right: $ => S(':', $.clause),
    defer: $ => S(':', $.adjunct),
    bind:    $ => D(3, S(F('v', $.noun), F('f', O($.op)), ':', F('a', O($.clause)))),
    pending: $ => S(F('v', $.noun), F('f', O($.op)), ':', F('a', $.adjunct)),
    transit: $ => D(1, S(F('a', $.noun), F('v', C($.verb, A($._MINUS, $.op))), F('b', $.clause))),
    intrans: $ => P(1, S(F('a', $.noun), F('v', $.verb), OF('z', $.adjunct))),
    apposit: $ => D(-1, S(F('f', $.phrase), F('a', $.clause))),
    compose: $ => D(1, C(F('v', $.verb), S(F('f', $.phrase), F('z', $.adjunct)))),
    affix:   $ => D(2, S(F('a', $.noun), F('v', A($._MINUS, $.op)), F('b', $.clause))),
    prefix:  $ => D(2, S(F('a', $.noun), F('v', A($._MINUS, $.op)), O(F('z', $.adjunct)))),
    phrase: $ => C($.verb, $.noun),
    noun: $ => C($.apply, $.group, $.list, $.lambda, $.literal, $.amend, $.dmend, $.dict, $.table, $.utable, $.adverb_val),
    verb: $ => C($.term, $.op, $.verb_io, $.monad),
    term: $ => D(5, prec.left(S(F('f', $.phrase), F('a', $.adverb)))),
    monad: $ => D(-1, S(F('f', $.verb), ':')),
    // adverb_val: adverb used as a noun value inside expressions e.g. @(')
    // Only ' and \ forms — bare / conflicts with comments, /: and \: conflict with term's immediate adverb
    adverb_val: _ => /['\\]/,
    apply: $ => S(F('f', $.phrase), '[', F('a', O($.seq)), ']'),
    group: $ => S('(', C($._line, A($.adverb, $.adverb_val)), ')'),
    list: $ => S('(', O($.seq), ')'),
    seq: $ => C(R1($.div), S(R($.div), S($._line, R(S($.div, O($._line)))))),
    lambda: $ => S( '{', F('a', O($.args)), F('b', O($.seq)), '}'),
    args: $ => S('[', O($.var), R(S($.div, O($.var))), ']'),
    cond: $ => S('$[', $._stmt, R1(S(';', $._stmt)), ']'),
    amend: $ => S('@[', $.seq, ']'),
    dmend: $ => S('.[', $.seq, ']'),
    dict: $ => S('[', O($.items), ']'),
    table: $ => P(3, S('[[]', O($.items), ']')),
    utable: $ => P(2, S('[[', $.items, ']', O($.items), ']')),
    items: $ => S($.item, R(S($.div, $.item))),
    item: $ => P(2, S(F('k', $.name), ':', F('v', O($._stmt)))),
    name: $ => C($.int, $.string, $.symbol, $.var),
    op: $ => C(P(-1, ':'), /[%!&+*|<>=~,^#_$?@./-]/, $._keyword_op),
    verb_io: _ => T(S(/\d/, ':')),
    adverb: _ => P(1, I(/[/\\\']:?/)),
    literal: $ => C($.bool, $.bools, $.int, $.ints, $.float, $.floats, $.date, $.dates, $.time, $.times, $.string, $.symbols, $.symbol, $.var),
    bool: $ => $._BOOL,
    bools: $ => $._BOOLS,
    int: _ => C(/-?0[NW]/, /-?\d+/, /-?0x[\da-f]+/i),
    ints: $ => $._INTS,
    float: _ => C(/-?0[nw]/, decimal),
    floats: $ => $._FLOATS,
    date: _ => /\d{4}\.\d{2}\.\d{2}/,
    dates: $ => $._DATES,
    time: _ => /\d{2}:\d{2}:\d{2}(?:\.\d+)?/,
    times: $ => $._TIMES,
    string: $ => $._STRING,
    symbol: $ => T(S('`', O(C(
      R1(C(iden, decimal, '.', /-?0[NWwn]/, /-?0x[\da-f]+/i, /0b[01]+/)),
      /[%!&+*|<>=~,^#_$?@/-]/,
      S('"', /[^"{}]*/, '"'),
    )))),
    symbols: $ => $._SYMBOLS,
    var: _ => /[a-zA-Z][a-zA-Z\d]*/,
    _var: _ => /[a-zA-Z][a-zA-Z\d]*/,
    _keyword_op: $ => C('sqrt', 'sqr', 'exp', 'log', 'sin', 'cos', 'abs', 'first', 'last', 'count', 'in', 'has'),
    N0: _ => '0N', n0: _ => '0n', w0: _ => /-?0w/,
    sep: _ => C(/;\s*/, /\n/),
    div: _ => C(/;\s*/, /\n\s*/),
    _line_comment: $ => A(T(P(10, S('/', /[^\n]*/))), $.comment),
    _inline_comment: $ => A(T(P(10, S(/[ \t]+/, '/', /[^\n]*/))), $.comment),
  }
})

// query: $ => C($.select, $.update, $.delete),
// select: $ => S('select', O($.rows), O(S('by', $.rows)), $.from, O($.where)),
// update: $ => S('update', $.rows, $.from, O($.where)),
// delete: $ => S('delete', $.from, O($.where)),
// from: $ => S('from', $.var),
// where: $ => S('where', $._stmt),
// rows: $ => D(2, S($._stmt, R(S(/,\s*/, $._stmt)))),
