test/corpus/adverbs.txt
==================
adverb as value in group
==================
(')
(\)
---
(terse
  (group (adverb_val)) (sep)
  (group (adverb_val))
)
==================
f' each1
==================
#'("abc";3 4 5 6)
---
(terse
  (apposit
    (term (op) (adverb))
    (list (seq (literal (string)) (div) (literal (ints))))))
==================
x F' each2
==================
2 3 #'"ab"
---
(terse
  (transit
    (literal (ints))
    (term (op) (adverb))
    (literal (string))))
==================
each adverb
==================
{x+1}'(1 2;3 4)
---
(terse (apposit
  (term
    (lambda (seq (transit (literal (var)) (op) (literal (int)))))
    (adverb))
  (list (seq
    (literal (ints)) (div)
    (literal (ints))))))
==================
each-prior adverb
==================
3':"abcdef"
---
(terse
  (apposit
    (term (literal (int)) (adverb))
    (literal (string))))
==================
each-right adverb
==================
1 2*/:3 4
---
(terse
  (transit (literal (ints))
    (term (op) (adverb))
    (literal (ints))))
