test/corpus/ink/literals.txt
==================
empty
==================

---
(terse)
==================
integer
==================
42
---
(terse (literal (int)))
==================
negative integer
==================
-3
---
(terse (literal (int)))
==================
int vector
==================
1 2 3
---
(terse (literal (ints)))
==================
int with null
==================
0 1 -2 0N
---
(terse (literal (ints)))
==================
float
==================
3.14
---
(terse (literal (float)))
==================
float vector
==================
1.0 2.0 3.0
---
(terse (literal (floats)))
==================
mixed float vector
==================
1.0 2 3
---
(terse (literal (floats)))
==================
bool
==================
1b
---
(terse (literal (bool)))
==================
bool vector
==================
0110b
---
(terse (literal (bools)))
==================
string
==================
"hello"
---
(terse (literal (string)))
==================
string doubling
==================
"""
---
(terse (literal (string)))
==================
symbol
==================
`abc
---
(terse (literal (symbol)))
==================
symbol vector
==================
`a`b`c
---
(terse (literal (symbols)))
==================
variable
==================
abc
---
(terse (literal (var)))
==================
list
==================
(1;2;3)
---
(terse (list (seq (literal (int)) (div) (literal (int)) (div) (literal (int)))))
==================
group
==================
(1+2)
---
(terse (group (transit (literal (int)) (op) (literal (int)))))
