test/corpus/temporal.txt
==================
date & time
==================
2026.02.16; 12:34:56.789
---
(terse
  (literal (date)) (sep)
  (literal (time)))
==================
date & time can also be stranded
==================
2026.02.16 2026.02.17 2026.02.18
12:34:56.789 15:34:56.789
---
(terse
  (literal (dates)) (sep)
  (literal (times)))
