test/corpus/transit.txt
=================
i+i
=================
1+1
---
(terse
  (transit (literal (int)) (op) (literal (int))))
=================
i + i
=================
1 + 1
---
(terse
  (transit (literal (int)) (op) (literal (int))))
=================
i+ i
=================
1+ 1
---
(terse
  (transit (literal (int)) (op) (literal (int))))
=================
i +i
=================
1 +1
---
(terse
  (transit (literal (int)) (op) (literal (int))))
=================
I+i
=================
1 2 3+1
---
(terse
  (transit (literal (ints)) (op) (literal (int))))
=================
i+I
=================
1+1 2 3
---
(terse
  (transit (literal (int)) (op) (literal (ints))))
=================
i + I
=================
1 + 1 2 3
---
(terse
  (transit (literal (int)) (op) (literal (ints))))
=================
I+I
=================
1 2 3+4 5 6
---
(terse
  (transit (literal (ints)) (op) (literal (ints))))
=================
I + I
=================
1 2 + 4 5
---
(terse
  (transit (literal (ints)) (op) (literal (ints))))
=================
I+ I
=================
1 2+ 4 5
---
(terse
  (transit (literal (ints)) (op) (literal (ints))))
=================
I +I
=================
1 2 +4 5
---
(terse
  (transit (literal (ints)) (op) (literal (ints))))
=================
i-i nospace
=================
2-3
---
(terse
  (transit (literal (int)) (op) (literal (int))))
=================
i-i large
=================
10-3
---
(terse
  (transit (literal (int)) (op) (literal (int))))
=================
I-i nospace
=================
1 2-3
---
(terse
  (transit (literal (ints)) (op) (literal (int))))
=================
f-f nospace
=================
3.0-1.0
---
(terse
  (transit (literal (float)) (op) (literal (float))))
